--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -1,7 +1,22 @@
+<%= link_to "<-- back to chats", chats_path, class: "underline" %>
+
 <div id="<%= dom_id chat %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Title:</strong>
+  <p class="my-5 text-lg">
     <%= chat.title %>
   </p>
-
 </div>
+
+<ul role="list" class="space-y-6">
+  <li class="relative flex gap-x-4">
+    <div class="absolute left-0 top-0 flex w-6 justify-center -bottom-6">
+      <div class="w-px bg-gray-200"></div>
+    </div>
+    <div class="relative flex h-6 w-6 flex-none items-center justify-center bg-white">
+      <div class="h-1.5 w-1.5 rounded-full bg-gray-100 ring-1 ring-gray-300"></div>
+    </div>
+    <p class="flex-auto py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900">User</span> created this chat.</p>
+    <span class="flex-none py-0.5 text-xs leading-5 text-gray-500"><%= time_ago_in_words(chat.created_at) %></span>
+  </li>
+  <%= render partial: "messages/message", collection: @chat.messages %>
+  <%= render "messages/form", chat: @chat, message: @message %>
+</ul>
