--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,12 +1,14 @@
-<div id="<%= dom_id message %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Role:</strong>
-    <%= message.role %>
-  </p>
+<li id="<%= dom_id message %>" class="relative flex gap-x-4">
+  <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
+    <div class="w-px bg-gray-200"></div>
+  </div>
+  <span class="relative h-6 w-6 flex-none text-center text-xl"><%= message.role_emoji %></span>
+  <div class="flex-auto rounded-md p-3 ring-1 ring-inset ring-gray-200 <%= message.assistant?? "bg-blue-50" : "bg-gray-50" %>">
+    <div class="flex justify-between gap-x-4">
+      <div class="py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900"><%= message.role.capitalize %></span></div>
+      <span class="flex-none py-0.5 text-xs leading-5 text-gray-500"><%= time_ago_in_words(message.created_at) %></span>
+    </div>
+    <p class="text-sm leading-6 text-gray-500"><%= message.content %></p>
+  </div>
+</li>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Content:</strong>
-    <%= message.content %>
-  </p>
-
-</div>
