--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,4 @@
-<li id="<%= dom_id message %>" class="relative flex gap-x-4">
+<li id="<%= dom_id(message) %>" class="relative flex gap-x-4">
   <div class="absolute -bottom-6 left-0 top-0 flex w-6 justify-center">
     <div class="w-px bg-gray-200"></div>
   </div>
