--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,6 +2,7 @@
 
 <div class="mx-auto md:w-2/3 w-full flex">
   <div class="mx-auto">
+    <%= link_to "<-- back to chats", chats_path, class: "underline" %>
     <%= render @chat %>
     <%= link_to "Edit this chat", edit_chat_path(@chat), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
     <%= link_to "Back to chats", chats_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
