--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="mt-6 flex gap-x-3">
-  <span class="relative h-6 w-6 flex-none rounded-full bg-gray-50 text-center text-xl"><%= @message.role_emoji %></span>
+  <span class="relative h-6 w-6 flex-none rounded-full bg-gray-50 text-center text-xl">🧑</span>
   <%= form_for(:message, url: chat_messages_path(chat), class: "relative flex-auto") do |form| %>
     <div class="overflow-hidden rounded-lg pb-12 shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-indigo-600">
       <%= form.label :content, class: "sr-only" %>
