--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -14,7 +14,9 @@
     <ul class="ml-5">
       <% @documents.each do |document| %>
         <li class="list-disc my-4">
-          <%= link_to document.title, document, class: "font-medium underline" %>
+          <%= link_to document, class: "font-medium" do %>
+            <span class="underline"><%= document.title %></span> <span class="rounded-full bg-green-100 px-2.5 py-0.5 text-sm font-medium text-green-800"><%= t(:embeddings, count: document.embeddings.count) %></span>
+          <% end %>
         </li>
       <% end %>
     </ul>
