--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,3 +11,99 @@
 }
 
 */
+
+.markdown h1 {
+  font-size: 2em;
+  font-weight: bold;
+  margin: 1em 0 0.5em;
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.3em;
+}
+
+.markdown h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin: 1em 0 0.5em;
+}
+
+.markdown h3 {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-top: 1em;
+}
+
+.markdown p {
+  margin: 0.75em 0;
+  line-height: 1.6;
+}
+
+.markdown ul {
+  margin: 0.75em 0;
+  padding-left: 1.5em;
+  list-style-type: disc;
+}
+
+.markdown ol {
+  margin: 0.75em 0;
+  padding-left: 1.5em;
+  list-style-type: decimal;
+}
+
+.markdown li {
+  margin: 0.3em 0;
+}
+
+.markdown pre {
+  background-color: #f5f5f5;
+  padding: 1em;
+  overflow-x: auto;
+  border-radius: 5px;
+  font-family: monospace;
+}
+
+.markdown code {
+  background-color: #f0f0f0;
+  padding: 0.2em 0.4em;
+  border-radius: 3px;
+  font-family: monospace;
+}
+
+.markdown blockquote {
+  border-left: 4px solid #ccc;
+  padding-left: 1em;
+  color: #666;
+  margin: 1em 0;
+  font-style: italic;
+}
+
+.markdown a {
+  color: #3b82f6; /* Tailwind blue-500 */
+  text-decoration: underline;
+}
+
+.markdown table {
+  width: 100%;
+  border-collapse: collapse;
+  margin: 1em 0;
+  font-size: 0.95em;
+}
+
+.markdown th,
+.markdown td {
+  border: 1px solid #ddd;
+  padding: 0.6em 0.8em;
+  text-align: left;
+}
+
+.markdown th {
+  background-color: #f9fafb; /* cor clara tipo Tailwind gray-50 */
+  font-weight: 600;
+}
+
+.markdown tr:nth-child(even) {
+  background-color: #f5f5f5; /* zebra striping */
+}
+
+.markdown tr:hover {
+  background-color: #f0f0f0;
+}
