--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -8,7 +8,9 @@
       <div class="py-0.5 text-xs leading-5 text-gray-500"><span class="font-medium text-gray-900"><%= message.role.capitalize %></span></div>
       <span class="flex-none py-0.5 text-xs leading-5 text-gray-500"><%= time_ago_in_words(message.created_at) %></span>
     </div>
-    <p class="text-sm leading-6 text-gray-500"><%= message.content %></p>
+    <div data-controller="markdown" class="text-sm leading-6 text-gray-500">
+      <div class="markdown" data-markdown-target="content"><%= message.content %></div>
+    </div>
   </div>
 </li>
 
